--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -1,3 +1,13 @@
+<h1>String Interpolation </h1>
 <p>
   {{stringInterpolation}} | {{numberInterpolation}}
 </p>
+<hr>
+<h1>Property Binding</h1>
+<!--String interpolation-->
+<input type="text" value="{{stringInterpolation}}">   
+<!--Property Binding-->
+<input type="text" [value]="stringInterpolation"> 
+<!---->
+<p [ngClass]="{redBorder: onTest()}">Is this styled?</p>
+<p [ngStyle]="{color: 'green'}">Is this styled?</p>
